[project]
name = "test-osa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lab-devices",
    "libusb-package>=1.0.26.3",
    "pyusb>=1.3.1",
    "pyvisa-py>=0.8.1",
    "pyqt5-qt5==5.15.2; platform_system == 'Windows'",
]

[tool.uv.sources]
lab-devices = { git = "https://github.com/UPVfab/lab_equipment.git", rev = "alpha_0_1_2" }
